# USC-Racing-config

./: .cursorrules  .dockerignore  .env  .gitignore  .vercelignore  AERO.md  COMMIT_CSV_IMPORT.md  CONFIGURATION.md  CURSOR_GUIDELINES.md  DEPLOYMENT.md  DEPLOY_QUICK.md  MIGRATION_GUIDE.md  MOTEC.md  MOTEC_LDX_REVIEW.md  MOTEC_UI.md  MOTEC_WORKFLOW.md  NETWORK_ACCESS.md  QUICK_FIX.md  README.md  README_PARAMETER_MANAGEMENT.md  README_TESTING.md  RUN_LOCAL.md  SHIBBOLETH_SETUP.md  TEST_CSV_IMPORT.md  TEST_SCENARIO_DEMO.md  TRACKSIDE_RELIABILITY.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOY_FIX.md  VERCEL_DEPLOY_NOW.md  VERCEL_FIX_SUMMARY.md  VERCEL_ISSUE_ANALYSIS.md  VERCEL_RUNTIME_FIX.md  VERCEL_SETUP.md  VERCEL_TROUBLESHOOTING.md  config.example.env  deploy.sh  docker-compose.yml  nginx.conf  requirements.txt  reset_website.py  (+3 more)
.cursor/: README.md
.github/workflows/: deploy-pages.yml  test.yml
api/: index.py  test.py  test_simple.py
backend/: Dockerfile  main.py  requirements.txt
config/: aero.config.example.json  telemetry_schema.aero.json  telemetry_schema.example.json
deploy/: DEPLOYMENT_GUIDE.md
docs/: README.md
frontend/: Dockerfile  FILE_UPLOAD_STATUS.md  QUICK_START.md  README.md  SETUP.md  WIRING_CHECKLIST.md  middleware.ts  next.config.js  package.json  tailwind.config.ts
motec-parser/: .gitignore  Cargo.toml  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  build.sh  pyproject.toml
motec-parser/src/: error.rs  ld.rs  ldx.rs  lib.rs  main.rs  python_bindings.rs
tests/: conftest.py  test_auth.py  test_parameters.py  test_users.py
(+54 files in other folders)
